--- a/FakeNews_Accenture.ipynb
+++ b/FakeNews_Accenture.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEmtMPl7pP+AuAlK2loSbK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "NEivgZd_D95d",
         "colab": {
@@ -61,7 +60,7 @@
         "id": "O5k5YTGgFRJM",
         "outputId": "eddfe176-b19f-4b01-c2fa-2362aefe8896"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,6 +79,29 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"This is Test 3 for Version Control\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7MTCRN5KLBBi",
+        "outputId": "5f7b435c-38dd-4e2a-9a9e-19deec25a107"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is Test 3 for Version Control\n"
+          ]
+        }
+      ]
     }
   ]
 }
