--- a/FakeNews_Accenture.ipynb
+++ b/FakeNews_Accenture.ipynb
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7MTCRN5KLBBi",
-        "outputId": "5f7b435c-38dd-4e2a-9a9e-19deec25a107"
+        "outputId": "68651497-23c2-4e4a-c40e-484a38a1f978"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,6 +102,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"This is Test 3 for Version Control\")"
+      ],
+      "metadata": {
+        "id": "U3qVUlAsKWCo",
+        "outputId": "e295f99b-4526-4038-b220-c4d856b993bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is Test 3 for Version Control\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EBlLDdZHKXII"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
