--- a/FakeNews_Accenture.ipynb
+++ b/FakeNews_Accenture.ipynb
@@ -27,26 +27,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
-        "id": "NEivgZd_D95d",
+        "id": "NEivgZd_D95d"
+      },
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import re\n",
+        "import os"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5cc146f-7d6a-4e21-c94d-56328ff9e75a"
+        "id": "M9ggm4_aIjFP",
+        "outputId": "19a93da9-5fb8-44a0-feda-407e7872f8d0"
       },
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World! This is Workspace Test!\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
-      ],
-      "source": [
-        "print(\"Hello World! This is Workspace Test!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "folder_path = '/content/drive/My Drive/Break Through Tech/AI Studio/Google Colab/Data Set/'\n",
+        "true_file = os.path.join(folder_path, 'True.csv')\n",
+        "fake_file = os.path.join(folder_path, 'Fake.csv')\n",
+        "true_df = pd.read_csv(true_file,header=0)\n",
+        "fake_df = pd.read_csv(fake_file,header=0)"
+      ],
+      "metadata": {
+        "id": "EyQKhtdUIyMK"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9-xr5OAvJllz"
+      },
+      "execution_count": 18,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -58,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O5k5YTGgFRJM",
-        "outputId": "eddfe176-b19f-4b01-c2fa-2362aefe8896"
+        "outputId": "d6ea3747-bdee-4abb-991e-00137bc8dd6d"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +118,7 @@
       "metadata": {
         "id": "LAsfVe08F6Df"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -86,36 +127,13 @@
         "print(\"This is Test 3 for Version Control\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "id": "7MTCRN5KLBBi",
-        "outputId": "68651497-23c2-4e4a-c40e-484a38a1f978"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "This is Test 3 for Version Control\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"This is Test 3 for Version Control\")"
-      ],
-      "metadata": {
-        "id": "U3qVUlAsKWCo",
-        "outputId": "e295f99b-4526-4038-b220-c4d856b993bc",
+        "outputId": "4c9bf376-36a2-4798-b764-3ae38706dadc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,15 +143,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "EBlLDdZHKXII"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
